Fixed alignment of greeting in home page

--- a/style/style.css
+++ b/style/style.css
@@ -49,26 +49,17 @@ body {
 }
 
 .greeting-container {
-  width: 40%;
+  width: 100%;
   height: 20%;
-  display: flex;
-  justify-content: space-between;
-}
-.greeting-style {
+  text-align: center;
   font-family: "Courier New", Courier, monospace;
   font-size: 50px;
   letter-spacing: 8px;
   font-family: serif;
   color: white;
   user-select: none;
-}
-.greeting-prefix {
-  height: 100%;
-  width: auto;
-}
-.greeting-username {
-  height: 100%;
-  width: auto;
+  display: flex;
+  justify-content: space-around;
 }
 
 /*-------------------- footer----------------------- */
